--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.6.0",
+    "@material-ui/icons": "^4.5.1",
+    "@material-ui/types": "^4.1.1",
     "connect": "^3.7.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-facebook-sdk": "^1.1.1",
     "serve-static": "^1.14.1"
   },
   "devDependencies": {
